--- a/css/flex.css
+++ b/css/flex.css
@@ -47,13 +47,13 @@ html {
     flex-basis: auto;
     
   }
-
-  /*#order{
-    order: 1;
-  }
-
-  #order2{
-    order:2;
+html
+  /*#ordehtmlr{
+    orderhtml: 1;
+  }html
+html
+  #order2html{
+    orderhtml:2;
   }
 
   #order3{
