--- a/css/perfil2.css
+++ b/css/perfil2.css
@@ -49,3 +49,23 @@ footer{
     background-color: #0a5fbb;
     border-color: #0a5fbb;
 }
+
+.mimodal-header{
+    background-color: #ff2e63;
+    color: white;
+    justify-content: center;
+    font-weight: bold;
+}
+
+.mimenu,
+.dropdown-menu {
+    background-color: #ff2e63 !important;
+}
+
+.dropdown-item:hover,
+.nav-link:hover{
+    background-color: transparent !important;
+    color: #08d9d6 !important;
+    font-size: 16px;
+    font-weight: bold;
+}
