--- a/css/perfil2.css
+++ b/css/perfil2.css
@@ -50,11 +50,15 @@ footer{
     border-color: #0a5fbb;
 }
 
-.mimodal-header{
+.header-landing{
     background-color: #ff2e63;
     color: white;
     justify-content: center;
     font-weight: bold;
+}
+
+.max-textarea{
+    max-height: 140px;
 }
 
 .mimenu,
@@ -66,6 +70,6 @@ footer{
 .nav-link:hover{
     background-color: transparent !important;
     color: #08d9d6 !important;
-    font-size: 16px;
+    /* font-size: 16px; */
     font-weight: bold;
 }
